Add professional JavaFX frontend with modern UI design
- Implemented complete JavaFX desktop application for Discussion Forum
- Added modern, aesthetic UI with smooth animations and transitions
- Created topic management with card-based design
- Implemented message viewing and posting functionality
- Added comprehensive styling with CSS (450+ lines)
- Integrated REST API communication with backend
- Included utility classes for animations and date formatting
- Added extensive documentation (README, Quick Start, Design Showcase)
- Configured Gradle build system with JavaFX 21
- Features: responsive layout, hover effects, keyboard shortcuts, error handling